# Proy_SO_2026_1

./: README.md
backend/src/: io_manager.cpp  json_writer.hpp  main.cpp  memory_manager.hpp  pcb.hpp  simulator.hpp  xd.cpp
backend/src/SISTEMAS OP/: CMakeLists.txt  SIMULADOR SISTEMAS OPERATIVOS.docx  escenario_modelo.json  output_modelo.json  output_simulacion.json
backend/src/SISTEMAS OP/src/: dispatcher.cpp  dispatcher.hpp  error_manager.cpp  error_manager.hpp  io_manager.hpp  json_reader.cpp  memory_manager.cpp  scheduler.cpp  scheduler.hpp
core/: dispatcher.py  engine.py  interrupts.py  models.py  process_manager.py  scheduler.py
frontend/: Guia_Integracion_C++.md  Requerimientos_Transcritos.md  escenario.json  escenario_modelo.json
frontend/simulation/: clock.py
frontend/src/: escenario_modelo.json  main.py
frontend/ui/: config_dialog.py  main_window.py
iodev/: devices.py  io_manager.py
kernel/dispatcher/: dispatcher.py
kernel/interrupts/: __init__.py  controller.py
kernel/io/: __init__.py  device.py  manager.py
kernel/memory/: manager.py  mmu.py  strategies.py
kernel/metrics/: collector.py
kernel/models/: __init__.py
kernel/scheduler/: fcfs.py  round_robin.py  sjf.py  srtf.py
memory/: allocation.py
metrics/: metrics.py
shared_data/: input.json  output_modelo.json
simulation/: __init__.py
src/: main.py
src/core/: clock.py
src/kernel/: __init__.py
src/memory/: bitmap.py
src/simulation/: config.py  engine.py
src/ui/: config_dialog.py  styles.py  widgets.py
ui/widgets/: io_widget.py  (+4 more)
utils/: randomizer.py
(+37 files in other folders)
